--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.10",
     "@supabase/supabase-js": "^2.53.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
